06-gitops - align gitops to fabrikam drone delivery
TODO: replace FlexVol with CSI

--- a/cluster-baseline-settings/dronedelivery/ns-backend-dev.yaml
+++ b/cluster-baseline-settings/dronedelivery/ns-backend-dev.yaml
@@ -3,6 +3,11 @@
 #   Licensed under the MIT License (MIT). See License.txt in the repo root for license information.
 #  ------------------------------------------------------------
 
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: backend-dev
+---
 apiVersion: v1
 kind: ResourceQuota
 metadata:
