--- a/github-workflow/aks-deploy.yaml
+++ b/github-workflow/aks-deploy.yaml
@@ -10,12 +10,17 @@
 #    ├── cluster-baseline-settings
 #    │   ├── aad-pod-identity
 #    │   │   └── aad-pod-identity.yaml
+#    │   ├── dronedelivery
+#    │   │   └─ network-policies
+#    │   │   └─── np-deny-all-non-whitelisted-traffic-dev.yaml
+#    │   │   └─ rbac
+#    │   │   └─── rbac-ai.yaml
 #    │   ├── akv-secrets-store-csi.yaml
 #    │   ├── container-azm-ms-agentconfig.yaml
 #    │   ├── flux.yaml
 #    │   ├── ingress-network-policy.yaml
 #    │   ├── kured-1.4.0-dockerhub.yaml
-#    │   ├── ns-a0008.yaml
+#    │   ├── ns-backend-dev.yaml
 #    │   ├── ns-cluster-baseline-settings.yaml
 #    │   └── user-facing-cluster-role-aad-group.yaml
 #    └── cluster-stamp.json
