--- a/charts/workflow/templates/workflow-networkpolicy-allow-egress-traffic.yaml
+++ b/charts/workflow/templates/workflow-networkpolicy-allow-egress-traffic.yaml
@@ -36,8 +36,7 @@ spec:
     - port: 53
       protocol: TCP
 {{- if .Values.networkPolicy.egress.external.enabled }}
-  # allow egress traffic to all external resources except pods within the
-  # cluster subnet
+  # allow egress traffic to all external resources
   - to:
     - ipBlock:
         cidr: 0.0.0.0/0
