--- a/charts/ingestion/templates/ingestion-networkpolicy-allow-egress-traffic.yaml
+++ b/charts/ingestion/templates/ingestion-networkpolicy-allow-egress-traffic.yaml
@@ -36,7 +36,8 @@ spec:
     - port: 53
       protocol: TCP
 {{- if .Values.networkPolicy.egress.external.enabled }}
-  # allow egress traffic to all external resources
+  # allow egress traffic to all external resources except pods within the
+  # cluster subnet
   - to:
     - ipBlock:
         cidr: 0.0.0.0/0
