--- a/charts/workflow/templates/workflow-networkpolicy-allow-egress-traffic.yaml
+++ b/charts/workflow/templates/workflow-networkpolicy-allow-egress-traffic.yaml
@@ -35,11 +35,16 @@ spec:
       protocol: UDP
     - port: 53
       protocol: TCP
+  - to:
+        - podSelector: {}
 {{- if .Values.networkPolicy.egress.external.enabled }}
-  # allow egress traffic to all external resources
+  # allow egress traffic to all external resources except pods within the
+  # cluster subnet
   - to:
     - ipBlock:
         cidr: 0.0.0.0/0
+        except:
+        - {{ required "networkPolicy.egress.external.clusterSubnetPrefix is required to enable external traffic" .Values.networkPolicy.egress.external.clusterSubnetPrefix }}
 {{- else if .Values.networkPolicy.egress.allowAll }}
   - to: []
 {{- end -}}
