--- a/github-workflow/aks-deploy.yaml
+++ b/github-workflow/aks-deploy.yaml
@@ -54,8 +54,8 @@ env:
   AKS_LOCATION: '<resource-group-localtion>'                                        # The location where the AKS cluster is going to be deployed
   GEO_REDUNDANCY_LOCATION: '<geo-redundancy-location>'                              # The location for Azure resources that support native geo-redunancy. Should be different than the location parameter and ideally should be a paired region - https://docs.microsoft.com/en-us/azure/best-practices-availability-paired-regions. This region does not need to support availability zones.
   TARGET_VNET_RESOURCE_ID: '<cluster-spoke-vnet-resource-id>'                       # The regional network spoke VNet Resource ID that the cluster will be joined to
-  K8S_RBAC_ENTRA_TENANTID: '<tenant-id-with-user-admin-permissions>'          # The tenant to integrate AKS-managed Azure AD
-  K8S_RBAC_ENTRA_ADMIN_GROUP_OBJECTID: '<azure-ad-aks-admin-group-object-id>' # The Azure AD group object ID that has admin access to the AKS cluster
+  K8S_RBAC_ENTRA_TENANTID: '<tenant-id-with-user-admin-permissions>'                # The tenant to integrate AKS-managed Microsoft Entra ID
+  K8S_RBAC_ENTRA_ADMIN_GROUP_OBJECTID: '<azure-ad-aks-admin-group-object-id>'       # The Microsoft Entra group object ID that has admin access to the AKS cluster
   CLUSTER_AUTHORIZED_IP_RANGES: '[]'                                                # By default, this deployment will allow unrestricted access to your cluster's API Server. You should limit access to the API Server to a set of well-known IP addresses (i.,e. your hub firewall IP, bastion subnet, build agents, or any other networks you'll administer the cluster from), and can do so by adding a CLUSTER_AUTHORIZED_IP_RANGES="['managementRange1', 'managementRange2', 'AzureFirewallIP/32']"" parameter.
   DELIVERY_ID_NAME: <delivery-id-name>                                              # The name of the delivery managed identity
   DELIVERY_ID_PRINCIPAL_ID: <delivery-principal-id>                                 # The principal id for the delivery managed identity
