--- a/charts/delivery/templates/delivery-ingress.yaml
+++ b/charts/delivery/templates/delivery-ingress.yaml
@@ -15,9 +15,9 @@ kind: Ingress
 metadata:
   name: {{ $relname }}-ingress
   annotations:
-    kubernetes.io/ingress.class: azure/application-gateway
     kubernetes.io/ingress.allow-http: "false"
     appgw.ingress.kubernetes.io/appgw-ssl-certificate: "appgw-ssl-certificate"
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/api/deliveries"
     # TODO: modify delivery containers to start listening https instead (dont forget
     # probes as they override the appgw probes cfg). Then uncomment the following
     # annotations to have e2e TLS: https://github.com/Azure/application-gateway-kubernetes-ingress/issues/1048
@@ -27,12 +27,15 @@ metadata:
     # appgw.ingress.kubernetes.io/hostname-extension: "*.aks-agic.fabrikam.com"
     # appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "root-cert-wildcard-aks-ingress-fabrikam"
 spec:
+  ingressClassName: azure-application-gateway
+  {{- if .Values.ingress.tls }}
   tls:
   {{- range .Values.ingress.hosts }}
+  {{- if .tls }}
   - hosts:
     - {{ .name }}
-  {{- if .tlsSecretName }}
     secretName: {{ $relname }}-{{ .tlsSecretName }}
+  {{- end }}
   {{- end }}
   {{- end }}
   rules:
@@ -41,24 +44,15 @@ spec:
     http:
       paths:
       {{- if .path }}
-      - path: {{ printf "%s/%s/" .path $appversion }}api/deliveries*
+      - path: {{ printf "%s/%s/" .path $appversion }}api/deliveries
         pathType: Prefix
       {{- else }}
-      - path: {{ $defaultversionedpath }}api/deliveries*
+      - path: {{ $defaultversionedpath }}api/deliveries
         pathType: Prefix
       {{- end }}
         backend:
           service:
             name: "{{ .serviceName }}-{{ $svcversion }}"
             port:
-              number: 80
-      {{- if (eq $appversion "v0.1.0") }}
-      - path: {{ default "/" .path }}api/deliveries*
-        pathType: Prefix
-        backend:
-          service:
-            name: "{{ .serviceName }}"
-            port:
-              number: 80
-      {{- end }}
+              name: http
   {{ end }}
