--- a/charts/dronescheduler/templates/dronescheduler-deploy.yaml
+++ b/charts/dronescheduler/templates/dronescheduler-deploy.yaml
@@ -19,7 +19,6 @@ metadata:
     app.kubernetes.io/component: backend
     app.kubernetes.io/part-of: dronedelivery
     helm.sh/chart: {{ include "dronescheduler.chart" . }}
-    aadpodidbinding: {{ $fullname }}
   annotations:
     kubernetes.io/change-cause: {{ .Values.reason }}
 spec:
@@ -38,8 +37,9 @@ spec:
         app.kubernetes.io/component: backend
         app.kubernetes.io/part-of: dronedelivery
         helm.sh/chart: {{ include "dronescheduler.chart" . }}
-        aadpodidbinding: {{ $fullname }}
+        azure.workload.identity/use: "true"
     spec:
+      serviceAccountName: {{ .Values.identity.serviceAccountName }}
       securityContext:
         fsGroup: 1
       containers:
