--- a/charts/workflow/templates/workflow-deploy.yaml
+++ b/charts/workflow/templates/workflow-deploy.yaml
@@ -6,6 +6,7 @@
 ###################################################################################################
 # Workflow
 ###################################################################################################
+{{- $svcversion := .Chart.AppVersion | replace "." "" }}
 {{- $fullname := include "workflow.fullname" . | replace "." "" }}
 apiVersion: apps/v1
 kind: Deployment
@@ -19,7 +20,6 @@ metadata:
     app.kubernetes.io/component: backend
     app.kubernetes.io/part-of: dronedelivery
     helm.sh/chart: {{ include "workflow.chart" . }}
-    aadpodidbinding: {{ $fullname  }}
   annotations:
     kubernetes.io/change-cause: {{ .Values.reason }}
 spec:
@@ -38,9 +38,10 @@ spec:
         app.kubernetes.io/component: backend
         app.kubernetes.io/part-of: dronedelivery
         helm.sh/chart: {{ include "workflow.chart" . }}
-        aadpodidbinding: {{ $fullname  }}
+        azure.workload.identity/use: "true"
 {{ toYaml .Values.workflow.customPodLabels | indent 8 }}
     spec:
+      serviceAccountName: {{ .Values.identity.serviceAccountName }}
       securityContext:
         fsGroup: 1
       containers:
@@ -129,4 +130,4 @@ spec:
           driver: secrets-store.csi.k8s.io
           readOnly: true
           volumeAttributes:
-            secretProviderClass: "workflow-secrets-csi-akv"
+            secretProviderClass: workflow-secrets-csi-akv-{{ $svcversion }}
