--- a/charts/package/templates/package-secrets.yaml
+++ b/charts/package/templates/package-secrets.yaml
@@ -11,6 +11,6 @@ apiVersion: v1
 metadata:
   name: {{ .Release.Name }}-secrets
 type: Opaque
-stringData:
-  appinsights-ikey: {{ required "secrets.appinsights.ikey is required" .Values.secrets.appinsights.ikey }}
-  mongodb-pwd: {{ required "secrets.mongo.pwd is required" .Values.secrets.mongo.pwd }}
+data:
+  appinsights-ikey: {{  required "secrets.appinsights.ikey is required" .Values.secrets.appinsights.ikey | b64enc }}
+  mongodb-pwd: {{  required "secrets.mongo.pwd is required" .Values.secrets.mongo.pwd | b64enc }}
