--- a/cluster-manifests/backend-dev/rbac/rbac-ai.yaml
+++ b/cluster-manifests/backend-dev/rbac/rbac-ai.yaml
@@ -9,7 +9,7 @@ rules:
 ---
 # actual binding to the role
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: appinsights-k8s-property-reader-binding
 subjects:
