--- a/cluster-manifests/kube-system/kured-1.15.0-dockerhub.yaml
+++ b/cluster-manifests/kube-system/kured-1.15.0-dockerhub.yaml
@@ -104,7 +104,7 @@ spec:
           # PRODUCTION READINESS CHANGE REQUIRED
           # This image should be sourced from a non-public container registry, such as the
           # one deployed along side of this reference implementation.
-          # az acr import --source docker.io/kubereboot/kured:1.15.0 -n <your-acr-instance-name>
+          # az acr import --source ghcr.io/kubereboot/kured:1.15.0 -n <your-acr-instance-name>
           # and then set this to
           # image: <your-acr-instance-name>.azurecr.io/kubereboot/kured:1.15.0
           image: ghcr.io/kubereboot/kured:1.15.0
