--- a/cluster-manifests/kube-system/container-azm-ms-agentconfig.yaml
+++ b/cluster-manifests/kube-system/container-azm-ms-agentconfig.yaml
@@ -1,7 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name:  
+  name: container-azm-ms-agentconfig
   namespace: kube-system
 data:
   # https://raw.githubusercontent.com/microsoft/Docker-Provider/ci_prod/kubernetes/container-azm-ms-agentconfig.yaml
