--- a/charts/package/templates/package-secrets.yaml
+++ b/charts/package/templates/package-secrets.yaml
@@ -12,5 +12,5 @@ metadata:
   name: {{ .Release.Name }}-secrets
 type: Opaque
 data:
-  appinsights-ikey: {{  required "secrets.appinsights.ikey is required" .Values.secrets.appinsights.ikey | b64enc }}
+  appinsights-connectionstring: {{  required "secrets.appinsights.connectionstring is required" .Values.secrets.appinsights.connectionstring | b64enc }}
   mongodb-pwd: {{  required "secrets.mongo.pwd is required" .Values.secrets.mongo.pwd | b64enc }}
